Changes for 1.7.0

 - [DEV-358] added notification macros {HOST.CONN[1..9]} {HOST.DNS[1..9]} {IPADDRESS[1..9]} (Sasha)
 - [DEV-358] added notification macros {TRIGGER.KEY[1..9]} (Sasha)
 - [DEV-358] added notification macros {HOSTNAME[1..9]} (Sasha)
 - [DEV-358] added notification macros {ITEM.NAME[1..9]} (Sasha)
 - [DEV-358] added notification macros {PROFILE.*[1..9]} (Sasha)
 - [DEV-405] added highlighting of selected rows (Artem)
 - [DEV-397] added user name to output of {ESC.HISTORY} macros (Sasha)
 - [DEV-397] added notification macros {EVENT.ACK.STATUS} and {EVENT.ACK.HISTORY} (Sasha)
 - [DEV-405] Proxies, Nodes moved under "Administration->DM" (Artem)
 - [DEV-405] Items, Triggers, Graphs moved under "Configuration->Hosts" (Artem)
 - [DEV-405] Host Groups, Maintenancess moved under "Configuration" (Artem)
 - [DEV-406] added milliseconds to log files of all Zabbix daemon processes (Alexei)
 - [DEV-350] cleanup of sample config files, added sample of windows agent config (Alexei)
 - [DEV-404] improved web history (Vedmak)
 - [ZBX-961] fixed history strings saved not by reference (Vedmak)
 - [DEV-403] added Debug mode for user groups in order to simplify GUI troubleshooting (Alexei)
 - [ZBX-773] fixed typo 'attribures' (Richlv)
 - [ZBX-974] recompressed most frontend images with pngcrush (Richlv)
 - [DEV-400] added necessary link between hosts and groups (Artem)
 - [ZBX-944] fixed changelog reference (Richlv)
 - [DEV-394] added easy access when not logged in (Artem)
 - [DEV-398] added hostgroup filter for HostGroup and TemplateLinkage twinboxes (Vedmak)
 - [DEV-377] added search for hosts and host-groups (Artem)
 - [DEV-388] Discovery: added new action operations - enable/disable host (Sasha)
 - [ZBX-949] fixed undefined constant S_add_TO (Richlv)
 - [DEV-137] operation interval steps N-N will be displayed as N (Alexei)
 - [DEV-318] Notifications: fixed messaging for discovery events (Sasha)
 - [DEV-391] Notifications: added new {DISCOVERY.*} macros (Sasha)